--- a/visualizing-spatial-transcriptomics.html
+++ b/visualizing-spatial-transcriptomics.html
@@ -405,6 +405,16 @@ propagation and visualization in spatial transcriptomics. By integrating
 signal processing with spatial visualization, <em>SpotSpace</em> allows
 users to project network signals onto spot-level coordinates to explore
 signal patterns on tissue microenvironments.</p>
+<pre class="r"><code># The SpotSpace and SeuratData packages are required for this vignette:
+if (!require(&quot;remotes&quot;, quietly = TRUE)){
+  install.packages(&quot;remotes&quot;)
+}
+if (!require(&quot;SpotSpace&quot;, quietly = TRUE)){
+  remotes::install_github(&quot;sysbiolab/SpotSpace&quot;)
+}
+if (!require(&quot;SeuratData&quot;, quietly = TRUE)){
+  remotes::install_github(&quot;satijalab/seurat-data&quot;)
+}</code></pre>
 <p><br/></p>
 </div>
 <div id="setting-input-data" class="section level1">
@@ -421,8 +431,6 @@ library(RGraphSpace)
 library(PathwaySpace)
 library(SpotSpace)
 #--- Load other required packages for this section
-# Note: &#39;SeuratData&#39; is available from github, at
-# https://github.com/satijalab/seurat-data
 library(Seurat)
 library(SeuratObject)
 library(SeuratData)
@@ -578,12 +586,13 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] patchwork_1.3.2           stxBrain.SeuratData_0.1.2
-##  [3] ssHippo.SeuratData_3.1.4  SeuratData_0.2.2.9002    
-##  [5] Seurat_5.3.1.0000         SeuratObject_5.2.0       
-##  [7] sp_2.2-0                  SpotSpace_0.0.1          
-##  [9] PathwaySpace_1.0.3        RGraphSpace_1.1.0        
-## [11] ggplot2_3.5.2.9001        igraph_2.1.4             
+##  [1] patchwork_1.3.2           Seurat_5.3.1.0000        
+##  [3] SeuratObject_5.2.0        sp_2.2-0                 
+##  [5] stxBrain.SeuratData_0.1.2 ssHippo.SeuratData_3.1.4 
+##  [7] SeuratData_0.2.2.9002     SpotSpace_0.0.1          
+##  [9] remotes_2.5.0             PathwaySpace_1.0.3       
+## [11] RGraphSpace_1.1.0         ggplot2_3.5.2.9001       
+## [13] igraph_2.1.4             
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -597,7 +606,7 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.1-5  
 ##  [28] irlba_2.3.5.1          parallel_4.5.1         cluster_2.1.8.1       
 ##  [31] R6_2.6.1               ica_1.0-3              spatstat.data_3.1-8   
-##  [34] bslib_0.9.0            stringi_1.8.7          RColorBrewer_1.1-3    
+##  [34] stringi_1.8.7          bslib_0.9.0            RColorBrewer_1.1-3    
 ##  [37] reticulate_1.43.0      spatstat.univar_3.1-4  parallelly_1.45.1     
 ##  [40] lmtest_0.9-40          jquerylib_0.1.4        scattermore_1.2       
 ##  [43] Rcpp_1.1.0             knitr_1.50             tensor_1.5.1          
