--- a/spatial-transcriptomics-doc1.html
+++ b/spatial-transcriptomics-doc1.html
@@ -405,12 +405,12 @@ coordinates</h3>
 <p><strong>Package</strong>: PathwaySpace 1.0.3 <br/></p>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p>This tutorial will introduce the <em>SpotSpace</em> package, an
-extension to <em>PathwaySpace</em> alongside <em>Seurat</em> workflows,
-providing methods for signal propagation and visualization in spatial
+<p>This tutorial introduces the <em>SpotSpace</em> package, an extension
+to <em>PathwaySpace</em> alongside <em>Seurat</em> workflows, providing
+methods for signal propagation and visualization in spatial
 transcriptomics. By integrating signal processing with spatial
-visualization, <em>SpotSpace</em> allows users to project network
-signals onto spot coordinates to explore signal patterns in tissue
+visualization, <em>SpotSpace</em> provides methods for projecting
+network signals on spot coordinates to explore signal patterns in tissue
 microenvironments.</p>
 <pre class="r"><code># The SpotSpace and SeuratData packages are required for this vignette:
 if (!require(&quot;remotes&quot;, quietly = TRUE)){
