--- a/spatial-transcriptomics-doc1.html
+++ b/spatial-transcriptomics-doc1.html
@@ -529,8 +529,8 @@ weighted arithmetic mean, with each projection weighted by its own
 magnitude (for additional configuration details, see the <a
 href="signal-aggregation-rules.html"><em>signal aggregation
 rules</em></a> tutorial).</p>
-<p>Next, we show the results with minor variations to demonstrate plot
-settings.</p>
+<p>Next, we show the results with minor variations to demonstrate some
+of the available plot settings.</p>
 <pre class="r"><code># Plot tissue image and projection separated 
 p1 &lt;- plotPathwaySpace(ps=ps_brain, theme = &quot;th3&quot;, title = gene)
 p1$image &lt;- p1$image + xy_labs
