--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -409,7 +409,7 @@ coordinates</h3>
 <em>PathwaySpace</em> extension for the <em>Seurat</em> package <span
 class="citation">(Hao et al. 2024)</span>, providing methods for signal
 propagation and visualization in spatial transcriptomics. The
-<em>SpotSpace</em> package is designed to complement existing spatial
+<em>SpotSpace</em> package is designed to enhance existing spatial
 analysis workflows for exploring signal patterns in tissue
 microenvironments. In what follows, we present three step-by-step
 tutorials describing how to prepare input data for <em>SpotSpace</em>,
