--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -636,9 +636,11 @@ p2 &lt;- plotPathwaySpace(ps=pspace_obj, theme = &quot;th3&quot;,
 <h1>Visium HD dataset</h1>
 <div id="setting-input-data-2" class="section level2">
 <h2>Setting input data</h2>
-<p>Here, we will use a dataset previously featured in <em>Seurat</em>
-tutorials, consisting of spatial transcriptomics data from mouse brain
-generated with <strong>Visium HD technology</strong>. We will follow the
+<p>Here, we will use a higher-resolution spatial dataset from mouse
+brain generated with <strong>Visium HD technology</strong>. This
+platform provides whole-transcriptome gene expression data at a raw 2-µm
+resolution, with additional binned versions available at 8 and 16 µm.
+For this tutorial, we will use the 16-µm binned data. We will follow the
 same general steps from our previous spatial tutorials, preprocessing
 with <em>Seurat</em> and then extracting the relevant data for
 <em>PathwaySpace</em> downstream analyses. For additional details on
