--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -520,7 +520,7 @@ attenuates as a function of distance in pathway space. With
 <code>decay = 0.5</code>, the signal decreases to half of its initial
 value at a distance equal to <code>pdist</code> (for additional
 configuration details, see the <a
-href="modeling-signal-decay.html"><em>signal decay functions</em></a>
+href="modeling-signal-decay.html"><em>modeling signal decay</em></a>
 tutorial).</p>
 <pre class="r"><code># Project gene signal
 pspace_obj &lt;- circularProjection(pspace_obj, k = gs_vcount(pspace_obj), 
