--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -421,11 +421,17 @@ together.</p>
 if (!require(&quot;remotes&quot;, quietly = TRUE)){
   install.packages(&quot;remotes&quot;)
 }
+if (!require(&quot;PathwaySpace&quot;, quietly = TRUE)){
+  remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
+}
 if (!require(&quot;SpotSpace&quot;, quietly = TRUE)){
   remotes::install_github(&quot;sysbiolab/SpotSpace&quot;)
 }
 if (!require(&quot;SeuratData&quot;, quietly = TRUE)){
   remotes::install_github(&quot;satijalab/seurat-data&quot;)
+}
+if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3&quot;){
+  message(&quot;you need to update &#39;PathwaySpace&#39; for this vignette&quot;)
 }</code></pre>
 <pre class="r"><code>#--- Load SpotSpace
 library(RGraphSpace)
@@ -772,50 +778,50 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ##  [3] sp_2.2-0                       stxBrain.SeuratData_0.1.2     
 ##  [5] ssHippo.SeuratData_3.1.4       kidneyref.SeuratData_1.0.2    
 ##  [7] bonemarrowref.SeuratData_1.0.0 SeuratData_0.2.2.9002         
-##  [9] remotes_2.5.0                  patchwork_1.3.2               
+##  [9] patchwork_1.3.2                igraph_2.1.4                  
 ## [11] SpotSpace_0.0.1                PathwaySpace_1.0.3            
 ## [13] RGraphSpace_1.1.0              ggplot2_3.5.2.9001            
-## [15] igraph_2.1.4                   bs4cards_0.1.1                
+## [15] remotes_2.5.0                  bs4cards_0.1.1                
 ## 
 ## loaded via a namespace (and not attached):
-##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
-##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
-##   [7] spatstat.geom_3.5-0    matrixStats_1.5.0      ggridges_0.5.7        
-##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
-##  [13] reshape2_1.4.4         stringr_1.5.2          crayon_1.5.3          
-##  [16] pkgconfig_2.0.3        fastmap_1.2.0          labeling_0.4.3        
-##  [19] fontawesome_0.5.3      promises_1.3.3         rmarkdown_2.29        
-##  [22] purrr_1.1.0            xfun_0.53              cachem_1.1.0          
-##  [25] jsonlite_2.0.0         goftest_1.2-3          later_1.4.4           
-##  [28] spatstat.utils_3.1-5   irlba_2.3.5.1          parallel_4.5.1        
-##  [31] cluster_2.1.8.1        R6_2.6.1               ica_1.0-3             
-##  [34] spatstat.data_3.1-8    bslib_0.9.0            stringi_1.8.7         
-##  [37] RColorBrewer_1.1-3     reticulate_1.43.0      spatstat.univar_3.1-4 
-##  [40] parallelly_1.45.1      lmtest_0.9-40          jquerylib_0.1.4       
-##  [43] scattermore_1.2        Rcpp_1.1.0             knitr_1.50            
-##  [46] tensor_1.5.1           future.apply_1.20.0    zoo_1.8-14            
-##  [49] sctransform_0.4.2      httpuv_1.6.16          Matrix_1.7-4          
-##  [52] splines_4.5.1          tidyselect_1.2.1       abind_1.4-8           
-##  [55] rstudioapi_0.17.1      yaml_2.3.10            spatstat.random_3.4-1 
-##  [58] spatstat.explore_3.5-2 codetools_0.2-20       miniUI_0.1.2          
-##  [61] listenv_0.9.1          lattice_0.22-5         tibble_3.3.0          
-##  [64] plyr_1.8.9             shiny_1.11.1           withr_3.0.2           
-##  [67] S7_0.2.0               ROCR_1.0-11            evaluate_1.0.5        
-##  [70] Rtsne_0.17             future_1.67.0          fastDummies_1.7.5     
-##  [73] survival_3.8-3         polyclip_1.10-7        fitdistrplus_1.2-4    
-##  [76] pillar_1.11.0          KernSmooth_2.23-26     plotly_4.11.0         
-##  [79] generics_0.1.4         RcppHNSW_0.6.0         scales_1.4.0          
-##  [82] globals_0.18.0         xtable_1.8-4           glue_1.8.0            
-##  [85] lazyeval_0.2.2         tools_4.5.1            data.table_1.17.8     
-##  [88] RSpectra_0.16-2        RANN_2.6.2             fs_1.6.6              
-##  [91] dotCall64_1.2          cowplot_1.2.0          grid_4.5.1            
-##  [94] tidyr_1.3.1            nlme_3.1-168           cli_3.6.5             
-##  [97] rappdirs_0.3.3         spatstat.sparse_3.1-0  spam_2.11-1           
-## [100] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
-## [103] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
-## [106] progressr_0.15.1       ggrepel_0.9.6          htmlwidgets_1.6.4     
-## [109] farver_2.1.2           htmltools_0.5.8.1      lifecycle_1.0.4       
-## [112] httr_1.4.7             mime_0.13              MASS_7.3-65</code></pre>
+##   [1] RColorBrewer_1.1-3     rstudioapi_0.17.1      jsonlite_2.0.0        
+##   [4] magrittr_2.0.4         spatstat.utils_3.1-5   farver_2.1.2          
+##   [7] rmarkdown_2.29         fs_1.6.6               vctrs_0.6.5           
+##  [10] ROCR_1.0-11            spatstat.explore_3.5-2 htmltools_0.5.8.1     
+##  [13] sass_0.4.10            sctransform_0.4.2      parallelly_1.45.1     
+##  [16] KernSmooth_2.23-26     bslib_0.9.0            htmlwidgets_1.6.4     
+##  [19] ica_1.0-3              fontawesome_0.5.3      plyr_1.8.9            
+##  [22] plotly_4.11.0          zoo_1.8-14             cachem_1.1.0          
+##  [25] mime_0.13              lifecycle_1.0.4        pkgconfig_2.0.3       
+##  [28] Matrix_1.7-4           R6_2.6.1               fastmap_1.2.0         
+##  [31] fitdistrplus_1.2-4     future_1.67.0          shiny_1.11.1          
+##  [34] digest_0.6.37          tensor_1.5.1           RSpectra_0.16-2       
+##  [37] irlba_2.3.5.1          labeling_0.4.3         progressr_0.15.1      
+##  [40] spatstat.sparse_3.1-0  httr_1.4.7             polyclip_1.10-7       
+##  [43] abind_1.4-8            compiler_4.5.1         withr_3.0.2           
+##  [46] S7_0.2.0               fastDummies_1.7.5      MASS_7.3-65           
+##  [49] rappdirs_0.3.3         tools_4.5.1            lmtest_0.9-40         
+##  [52] httpuv_1.6.16          future.apply_1.20.0    goftest_1.2-3         
+##  [55] glue_1.8.0             nlme_3.1-168           promises_1.3.3        
+##  [58] grid_4.5.1             Rtsne_0.17             cluster_2.1.8.1       
+##  [61] reshape2_1.4.4         generics_0.1.4         gtable_0.3.6          
+##  [64] spatstat.data_3.1-8    tidyr_1.3.1            data.table_1.17.8     
+##  [67] spatstat.geom_3.5-0    RcppAnnoy_0.0.22       ggrepel_0.9.6         
+##  [70] RANN_2.6.2             pillar_1.11.0          stringr_1.5.2         
+##  [73] spam_2.11-1            RcppHNSW_0.6.0         later_1.4.4           
+##  [76] splines_4.5.1          dplyr_1.1.4            lattice_0.22-5        
+##  [79] survival_3.8-3         deldir_2.0-4           tidyselect_1.2.1      
+##  [82] miniUI_0.1.2           pbapply_1.7-4          knitr_1.50            
+##  [85] gridExtra_2.3          scattermore_1.2        xfun_0.53             
+##  [88] matrixStats_1.5.0      stringi_1.8.7          lazyeval_0.2.2        
+##  [91] yaml_2.3.10            evaluate_1.0.5         codetools_0.2-20      
+##  [94] tibble_3.3.0           cli_3.6.5              uwot_0.2.3            
+##  [97] xtable_1.8-4           reticulate_1.43.0      jquerylib_0.1.4       
+## [100] Rcpp_1.1.0             globals_0.18.0         spatstat.random_3.4-1 
+## [103] png_0.1-8              spatstat.univar_3.1-4  parallel_4.5.1        
+## [106] dotCall64_1.2          listenv_0.9.1          viridisLite_0.4.2     
+## [109] scales_1.4.0           ggridges_0.5.7         purrr_1.1.0           
+## [112] crayon_1.5.3           rlang_1.1.6            cowplot_1.2.0</code></pre>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1 class="unnumbered">References</h1>
