--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -421,9 +421,10 @@ together.</p>
 <div id="before-you-start" class="section level1">
 <h1>Before You Start</h1>
 <p>Users are expected to be familiar with <a
-href="(https://satijalab.org/seurat/)%7Btarget=%22_blank%22%20rel=%22noopener%22%7D"><em>Seurat</em>’s
-workflows</a>, including how to handle spatial transcriptomics data and
-spatial coordinates.</p>
+href="https://satijalab.org/seurat/" target="_blank"
+rel="noopener"><em>Seurat</em>’s workflows</a> <span
+class="citation">(Hao et al. 2024)</span>, including how to handle
+spatial transcriptomics data and spatial coordinates.</p>
 <p><svg aria-hidden="true" role="img" viewBox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:orange;overflow:visible;position:relative;"><path d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"/></svg>
 If you are new to <em>Seurat</em>’s spatial data structures, please
 review the <a
@@ -825,55 +826,54 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] Seurat_5.3.1.9999              SeuratObject_5.2.0            
-##  [3] sp_2.2-0                       stxBrain.SeuratData_0.1.2     
-##  [5] ssHippo.SeuratData_3.1.4       kidneyref.SeuratData_1.0.2    
-##  [7] bonemarrowref.SeuratData_1.0.0 SeuratData_0.2.2.9002         
-##  [9] fontawesome_0.5.3              patchwork_1.3.2               
-## [11] igraph_2.2.0                   SpotSpace_0.0.2               
-## [13] PathwaySpace_1.0.3.1           RGraphSpace_1.1.0             
-## [15] ggplot2_4.0.0.9000             remotes_2.5.0                 
-## [17] bs4cards_0.1.1                
+##  [1] patchwork_1.3.2                Seurat_5.3.1.9999             
+##  [3] SeuratObject_5.2.0             sp_2.2-0                      
+##  [5] stxBrain.SeuratData_0.1.2      ssHippo.SeuratData_3.1.4      
+##  [7] kidneyref.SeuratData_1.0.2     bonemarrowref.SeuratData_1.0.0
+##  [9] SeuratData_0.2.2.9002          SpotSpace_0.0.2               
+## [11] PathwaySpace_1.0.3.1           RGraphSpace_1.1.0             
+## [13] ggplot2_4.0.0.9000             remotes_2.5.0                 
+## [15] fontawesome_0.5.3             
 ## 
 ## loaded via a namespace (and not attached):
-##   [1] RColorBrewer_1.1-3     rstudioapi_0.17.1      jsonlite_2.0.0        
-##   [4] magrittr_2.0.4         spatstat.utils_3.2-0   farver_2.1.2          
-##   [7] rmarkdown_2.30         fs_1.6.6               vctrs_0.6.5           
-##  [10] ROCR_1.0-11            spatstat.explore_3.5-3 htmltools_0.5.8.1     
-##  [13] sass_0.4.10            sctransform_0.4.2      parallelly_1.45.1     
-##  [16] KernSmooth_2.23-26     bslib_0.9.0            htmlwidgets_1.6.4     
-##  [19] ica_1.0-3              plyr_1.8.9             plotly_4.11.0         
-##  [22] zoo_1.8-14             cachem_1.1.0           mime_0.13             
-##  [25] lifecycle_1.0.4        pkgconfig_2.0.3        Matrix_1.7-4          
-##  [28] R6_2.6.1               fastmap_1.2.0          fitdistrplus_1.2-4    
-##  [31] future_1.67.0          shiny_1.11.1           digest_0.6.37         
-##  [34] tensor_1.5.1           RSpectra_0.16-2        irlba_2.3.5.1         
-##  [37] labeling_0.4.3         progressr_0.17.0       spatstat.sparse_3.1-0 
-##  [40] httr_1.4.7             polyclip_1.10-7        abind_1.4-8           
-##  [43] compiler_4.5.1         withr_3.0.2            S7_0.2.0              
-##  [46] fastDummies_1.7.5      MASS_7.3-65            rappdirs_0.3.3        
-##  [49] tools_4.5.1            lmtest_0.9-40          httpuv_1.6.16         
-##  [52] future.apply_1.20.0    goftest_1.2-3          glue_1.8.0            
-##  [55] nlme_3.1-168           promises_1.3.3         grid_4.5.1            
-##  [58] Rtsne_0.17             cluster_2.1.8.1        reshape2_1.4.4        
-##  [61] generics_0.1.4         gtable_0.3.6           spatstat.data_3.1-8   
-##  [64] tidyr_1.3.1            data.table_1.17.8      spatstat.geom_3.6-0   
-##  [67] RcppAnnoy_0.0.22       ggrepel_0.9.6          RANN_2.6.2            
-##  [70] pillar_1.11.1          stringr_1.5.2          spam_2.11-1           
-##  [73] RcppHNSW_0.6.0         later_1.4.4            splines_4.5.1         
-##  [76] dplyr_1.1.4            lattice_0.22-5         survival_3.8-3        
-##  [79] deldir_2.0-4           tidyselect_1.2.1       miniUI_0.1.2          
-##  [82] pbapply_1.7-4          knitr_1.50             gridExtra_2.3         
-##  [85] scattermore_1.2        xfun_0.53              matrixStats_1.5.0     
-##  [88] stringi_1.8.7          lazyeval_0.2.2         yaml_2.3.10           
-##  [91] evaluate_1.0.5         codetools_0.2-20       tibble_3.3.0          
-##  [94] cli_3.6.5              uwot_0.2.3             xtable_1.8-4          
-##  [97] reticulate_1.43.0      jquerylib_0.1.4        Rcpp_1.1.0            
-## [100] globals_0.18.0         spatstat.random_3.4-2  png_0.1-8             
-## [103] spatstat.univar_3.1-4  parallel_4.5.1         dotCall64_1.2         
-## [106] listenv_0.9.1          viridisLite_0.4.2      scales_1.4.0          
-## [109] ggridges_0.5.7         purrr_1.1.0            crayon_1.5.3          
-## [112] rlang_1.1.6            cowplot_1.2.0</code></pre>
+##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
+##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
+##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
+##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
+##  [13] reshape2_1.4.4         stringr_1.5.2          crayon_1.5.3          
+##  [16] pkgconfig_2.0.3        fastmap_1.2.0          promises_1.3.3        
+##  [19] rmarkdown_2.30         purrr_1.1.0            xfun_0.53             
+##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
+##  [25] later_1.4.4            spatstat.utils_3.2-0   irlba_2.3.5.1         
+##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
+##  [31] ica_1.0-3              spatstat.data_3.1-8    stringi_1.8.7         
+##  [34] bslib_0.9.0            RColorBrewer_1.1-3     reticulate_1.43.0     
+##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
+##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
+##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
+##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
+##  [49] Matrix_1.7-4           splines_4.5.1          igraph_2.2.0          
+##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
+##  [55] yaml_2.3.10            spatstat.random_3.4-2  spatstat.explore_3.5-3
+##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
+##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
+##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
+##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
+##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
+##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.1         
+##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
+##  [79] RcppHNSW_0.6.0         scales_1.4.0           globals_0.18.0        
+##  [82] xtable_1.8-4           glue_1.8.0             lazyeval_0.2.2        
+##  [85] tools_4.5.1            data.table_1.17.8      RSpectra_0.16-2       
+##  [88] RANN_2.6.2             dotCall64_1.2          cowplot_1.2.0         
+##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
+##  [94] cli_3.6.5              rappdirs_0.3.3         spatstat.sparse_3.1-0 
+##  [97] spam_2.11-1            viridisLite_0.4.2      dplyr_1.1.4           
+## [100] uwot_0.2.3             gtable_0.3.6           sass_0.4.10           
+## [103] digest_0.6.37          progressr_0.17.0       ggrepel_0.9.6         
+## [106] htmlwidgets_1.6.4      farver_2.1.2           htmltools_0.5.8.1     
+## [109] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
+## [112] MASS_7.3-65</code></pre>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1 class="unnumbered">References</h1>
