--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-18" />
+<meta name="date" content="2025-10-21" />
 
 <title>Visualizing spatial transcriptomics</title>
 
@@ -397,7 +397,7 @@ div.tocify {
 <h3 class="subtitle">Gene expression projections on spot
 coordinates</h3>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-18</h4>
+<h4 class="date">2025-10-21</h4>
 
 </div>
 
@@ -834,44 +834,44 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [17] bs4cards_0.1.1                
 ## 
 ## loaded via a namespace (and not attached):
-##   [1] RColorBrewer_1.1-3     rstudioapi_0.17.1      jsonlite_2.0.0        
-##   [4] magrittr_2.0.4         spatstat.utils_3.2-0   farver_2.1.2          
-##   [7] rmarkdown_2.30         fs_1.6.6               vctrs_0.6.5           
-##  [10] ROCR_1.0-11            spatstat.explore_3.5-3 htmltools_0.5.8.1     
-##  [13] sass_0.4.10            sctransform_0.4.2      parallelly_1.45.1     
-##  [16] KernSmooth_2.23-26     bslib_0.9.0            htmlwidgets_1.6.4     
-##  [19] ica_1.0-3              plyr_1.8.9             plotly_4.11.0         
-##  [22] zoo_1.8-14             cachem_1.1.0           mime_0.13             
-##  [25] lifecycle_1.0.4        pkgconfig_2.0.3        Matrix_1.7-4          
-##  [28] R6_2.6.1               fastmap_1.2.0          fitdistrplus_1.2-4    
-##  [31] future_1.67.0          shiny_1.11.1           digest_0.6.37         
-##  [34] tensor_1.5.1           RSpectra_0.16-2        irlba_2.3.5.1         
-##  [37] labeling_0.4.3         progressr_0.17.0       spatstat.sparse_3.1-0 
-##  [40] httr_1.4.7             polyclip_1.10-7        abind_1.4-8           
-##  [43] compiler_4.5.1         withr_3.0.2            S7_0.2.0              
-##  [46] fastDummies_1.7.5      MASS_7.3-65            rappdirs_0.3.3        
-##  [49] tools_4.5.1            lmtest_0.9-40          httpuv_1.6.16         
-##  [52] future.apply_1.20.0    goftest_1.2-3          glue_1.8.0            
-##  [55] nlme_3.1-168           promises_1.3.3         grid_4.5.1            
-##  [58] Rtsne_0.17             cluster_2.1.8.1        reshape2_1.4.4        
-##  [61] generics_0.1.4         gtable_0.3.6           spatstat.data_3.1-8   
-##  [64] tidyr_1.3.1            data.table_1.17.8      spatstat.geom_3.6-0   
-##  [67] RcppAnnoy_0.0.22       ggrepel_0.9.6          RANN_2.6.2            
-##  [70] pillar_1.11.1          stringr_1.5.2          spam_2.11-1           
-##  [73] RcppHNSW_0.6.0         later_1.4.4            splines_4.5.1         
-##  [76] dplyr_1.1.4            lattice_0.22-5         survival_3.8-3        
-##  [79] deldir_2.0-4           tidyselect_1.2.1       miniUI_0.1.2          
-##  [82] pbapply_1.7-4          knitr_1.50             gridExtra_2.3         
-##  [85] scattermore_1.2        xfun_0.53              matrixStats_1.5.0     
-##  [88] stringi_1.8.7          lazyeval_0.2.2         yaml_2.3.10           
-##  [91] evaluate_1.0.5         codetools_0.2-20       tibble_3.3.0          
-##  [94] cli_3.6.5              uwot_0.2.3             xtable_1.8-4          
-##  [97] reticulate_1.43.0      jquerylib_0.1.4        Rcpp_1.1.0            
-## [100] globals_0.18.0         spatstat.random_3.4-2  png_0.1-8             
-## [103] spatstat.univar_3.1-4  parallel_4.5.1         dotCall64_1.2         
-## [106] listenv_0.9.1          viridisLite_0.4.2      scales_1.4.0          
-## [109] ggridges_0.5.7         purrr_1.1.0            crayon_1.5.3          
-## [112] rlang_1.1.6            cowplot_1.2.0</code></pre>
+##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
+##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
+##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
+##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
+##  [13] reshape2_1.4.4         stringr_1.5.2          crayon_1.5.3          
+##  [16] pkgconfig_2.0.3        fastmap_1.2.0          promises_1.3.3        
+##  [19] rmarkdown_2.30         purrr_1.1.0            xfun_0.53             
+##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
+##  [25] later_1.4.4            spatstat.utils_3.2-0   irlba_2.3.5.1         
+##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
+##  [31] ica_1.0-3              spatstat.data_3.1-8    stringi_1.8.7         
+##  [34] bslib_0.9.0            RColorBrewer_1.1-3     reticulate_1.43.0     
+##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
+##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
+##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
+##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
+##  [49] Matrix_1.7-4           splines_4.5.1          tidyselect_1.2.1      
+##  [52] abind_1.4-8            rstudioapi_0.17.1      yaml_2.3.10           
+##  [55] spatstat.random_3.4-2  spatstat.explore_3.5-3 codetools_0.2-20      
+##  [58] miniUI_0.1.2           listenv_0.9.1          lattice_0.22-5        
+##  [61] tibble_3.3.0           plyr_1.8.9             shiny_1.11.1          
+##  [64] withr_3.0.2            S7_0.2.0               ROCR_1.0-11           
+##  [67] evaluate_1.0.5         Rtsne_0.17             future_1.67.0         
+##  [70] fastDummies_1.7.5      survival_3.8-3         polyclip_1.10-7       
+##  [73] fitdistrplus_1.2-4     pillar_1.11.1          KernSmooth_2.23-26    
+##  [76] plotly_4.11.0          generics_0.1.4         RcppHNSW_0.6.0        
+##  [79] scales_1.4.0           globals_0.18.0         xtable_1.8-4          
+##  [82] glue_1.8.0             lazyeval_0.2.2         tools_4.5.1           
+##  [85] data.table_1.17.8      RSpectra_0.16-2        RANN_2.6.2            
+##  [88] fs_1.6.6               dotCall64_1.2          cowplot_1.2.0         
+##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
+##  [94] cli_3.6.5              rappdirs_0.3.3         spatstat.sparse_3.1-0 
+##  [97] spam_2.11-1            viridisLite_0.4.2      dplyr_1.1.4           
+## [100] uwot_0.2.3             gtable_0.3.6           sass_0.4.10           
+## [103] digest_0.6.37          progressr_0.17.0       ggrepel_0.9.6         
+## [106] htmlwidgets_1.6.4      farver_2.1.2           htmltools_0.5.8.1     
+## [109] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
+## [112] MASS_7.3-65</code></pre>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1 class="unnumbered">References</h1>
